modificaciones en el diseño

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                             <i class="fa fa-map-marker"></i>
                             Colombia-Barranquilla 
                         </li>
-                        <li><a href="https://github.com/jjmatri/primereproyecto"><i class="fa fa-map-marker"></i>github</i></a> </li>            
-                    </ul>
+                        <li><i class="fa fa-github"></i>
+                            <a href="https://github.com/jjmatri/primereproyecto">github</a>
+                         </li>
+                        </ul>
 
                     
                 </div>
@@ -229,9 +231,9 @@
                         </div>
                         <div class="right-tl-content">
                             <div class="tl-content">
-                                <h5 class="tl-title-2">Dearrollador</h5>
+                                <h5 class="tl-title-2">Desarrollador</h5>
                                 <p class="para">
-                                    <li class="sa"> Soporte Técnico Claro y Servicio al Cliente</li> 
+                                    <li class="sa"> Soporte Técnico y Servicio al Cliente</li> 
                                     
                                 </p>
                             </div>
@@ -244,7 +246,7 @@
                         </div>
                         <div class="right-tl-content">
                             <div class="tl-content">
-                                <h5 class="tl-title-2">Senior Developer</h5>
+                                <h5 class="tl-title-2">Desarrollador</h5>
                                 <p class="para">
                                     <ol>
                                         <li class="sa">Conocimiento en lenguaje de programación (java), manejo de la herramienta jade (java) énfasis en MVC, manejo del motor de base de datos mysql - Postgres.</li>
