--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     
                 </div>
                 <div class="skills-section">
-                    <h3 class="main-title">Skills</h3>
+                    <h3 class="main-title">Habilidades/h3>
                     <ul>
                         <li>
                             <p class="skill-title">Javascript</p>
@@ -119,7 +119,7 @@
                     <h3 class="main-title">Referencias</h3>
                     <div class="referee">
                         <h6 class="sub-title">Yasmina isabel</h6>
-                        <p class="sub-para">Prefesora</p>
+                        <p class="sub-para">Profesora</p>
                         <ul>
                             <li>
                                 <i class="fa fa-phone"></i>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="referee">
                         <h6 class="sub-title">Wilder De Los Reyes</h6>
-                        <p class="sub-para">Senior Developer</p>
+                        <p class="sub-para">Desarrollador</p>
                         <ul>
                             <li>
                                 <i class="fa fa-phone"></i>
